--- a/thecode-macos Extension/Resources/manifest.json
+++ b/thecode-macos Extension/Resources/manifest.json
@@ -4,7 +4,7 @@
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.0.0",
+    "version": "1.1.0",
 
     "icons": {
         "48": "images/48.png",
@@ -13,6 +13,13 @@
         "256": "images/256.png",
         "512": "images/512.png"
     },
+    
+    "web_accessible_resources": [
+      {
+        "resources": ["images/128.png", "images/copy.svg"],
+        "matches": ["<all_urls>"]
+      }
+    ],
 
     "background": {
         "scripts": [ "background.js" ],
